cmake_minimum_required(VERSION 3.27)
project(DevSuperioLinguagemCpp)

set(CMAKE_CXX_STANDARD 17)

add_executable(DevSuperioLinguagemCpp PrimeiroPassoEmC++.cpp
        VariaveisETipos.cpp
        SaidaDeDados.cpp
        ProcessamentoECastingEmCpp.cpp
        EntradaDeDadosEmCpp.cpp
        EstruturaDeControleEmCpp.cpp
        ArraysEmCpp.cpp
        MatrizesEmCpp.cpp
        ProblemaRetangulo.cpp
        ProblemaIdadeEmCpp.cpp
        ProblemaMenorDeTresEmCpp.cpp
        ProblemaCrescente.cpp
        ProblemaSomaImpares.cpp
        ProblemaAlturasEmCpp.cpp
        ProblemaDiagonalNegativosEmCpp.cpp
)
